--- a/diagram-library/style.css
+++ b/diagram-library/style.css
@@ -249,12 +249,6 @@ p {
     margin: 0px;
 }
 
-.body-text {
-    font-size: 20px;
-    line-height: 30px;
-    letter-spacing: -0.4px;
-}
-
 .fp-1 {
     margin-top: 12px;
 }
@@ -361,7 +355,7 @@ p {
     margin-bottom: 9px;
 }
 
-.fp-4 {
+.fp-ig {
     margin-top: 12px;
 }
 
@@ -552,4 +546,562 @@ footer {
     border-top: 1px solid #c6c6c6;
     padding-top: 16px;
     align-self: end;
+}
+
+@media (max-width: 1112px) {
+    main {
+        display: grid;
+        gap: 17px;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(138, 80px);
+        max-width: 1120px;
+        padding: 70px;
+        background-color: #f5f5f5;
+    }
+    
+    header {
+        background-image: url(/diagram-library/image/diagram-library.png);
+        background-size: cover;
+        background-position: center;
+        max-width: 1280px;
+        width: 100%;
+        height: 441px;
+        position: absolute;
+        border: 1px solid #ffffff;
+        box-sizing: border-box;
+    }
+    
+    .back {
+        background-color: rgba(0, 0, 0, 0.58);
+        border-radius: 16px;
+        position: relative;
+        z-index: 3;
+        top: 10px;
+        left: 8px;
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        width: 74px;
+        height: 32px;
+        transition: background-color 0.2s cubic-bezier(0.16, 0.41, 0.74, 0.96);
+    }
+    
+    .back:hover {
+        background-color: #166ced;
+    }
+    
+    .back-icon {
+        position: relative;
+        left: 8px;
+    }
+    
+    .back-link {
+        display: inline;
+    }
+    
+    .back-text {
+        color: #ffffff;
+        font-size: 14px;
+        line-height: 14px;
+        font-weight: 600;
+        position: relative;
+        left: 11px;
+        top: 1px;
+    }
+    
+    h1 {
+        grid-column: 1 / 7;
+        grid-row: 6 / 7;
+        font-size: 38px;
+        line-height: 48px;
+        font-weight: normal;
+        letter-spacing: -1.5px;
+        margin: 0px;
+        position: relative;
+        top: -0px;
+    }
+    
+    .bold-title {
+        letter-spacing: -1px;
+    }
+    
+    .seperator {
+        border-bottom: 1px solid #c6c6c6;
+    }
+    
+    .s-1 {
+        grid-column: 1 / 7;
+        grid-row: 7 / 8;
+    }
+    
+    .work-info {
+        list-style-type: none;
+        padding: 0px;
+        margin: 0px;
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: -0.1px;
+    }
+    
+    .info-name {
+        grid-column: 1 / 2;
+        grid-row: 8 / 10;
+        color: #acacac;
+    }
+    
+    .info-content {
+        grid-column: 2 / 4;
+        grid-row: 8 / 10;
+        color: #000000;
+    }
+    
+    .info-name-item:not(:last-child), .info-content-item:not(:last-child) {
+        margin-bottom: 10px;
+    }
+    
+    .work-description {
+        grid-column: 4 / 7;
+        grid-row: 8 / 14;
+    }
+    
+    .work-description-paragraph:not(:last-child) {
+        margin-bottom: 12px;
+    } 
+    
+    p {
+        margin: 0px;
+    }
+    
+    .body-text {
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: -0.1px;
+    }
+    
+    .quick-link {
+        grid-column: 1 / 2;
+        grid-row: 13 / 14;
+        list-style-type: none;
+        margin: 0px;
+        padding: 0px;
+        line-height: 13px;
+        align-self: end;
+    }
+    
+    .link {
+        font-size: 13px;
+        line-height: 13px;
+        color: #166ced;
+        text-decoration: none;
+    }
+    
+    .link:hover {
+        text-decoration: underline;
+    }
+    
+    .quick-link-item:not(:last-child) {
+        margin-bottom: 14px;
+    }
+    
+    .s-2 {
+        grid-column: 1 / 7;
+        grid-row: 14 / 15;
+    }
+    
+    .section-title {
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: -0.1px;
+        color: #acacac;
+        font-weight: normal;
+        margin: 0px;
+    }
+    
+    .st-1 {
+        grid-column: 1 / 2;
+        grid-row: 15 / 16;
+    }
+    
+    .diagrams-for-bocomm {
+        grid-column: 1 / 5;
+        grid-row: 16 / 29;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .diagram-background {
+        background-color: #ffffff;
+        padding: 56px;
+    }
+    
+    .bank-of-communications-1 {
+        max-width: 472px;
+        width: 100%;
+        max-height: 100%;
+        height: auto;
+    }
+    
+    .bank-of-communications-2 {
+        margin-top: 40px;
+        max-width: 472px;
+        width: 100%;
+        max-height: 100%;
+        height: auto;
+    }
+    
+    .image-description {
+        margin-top: 10px;
+        font-size: 14px;
+        line-height: 14px;
+        color: #8e9aa9;
+        text-align: center;
+        font-family: "Inter";
+    }
+    
+    .sample-1 {
+        grid-column: 5 / 7;
+        grid-row: 16 / 18;
+        justify-self: right;
+        width: 90%;
+    }
+    
+    .paragraph-title {
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: -0.1px;
+        margin: 0px;
+    }
+    
+    .fp-1 {
+        margin-top: 9px;
+    }
+    
+    .sample-2 {
+        grid-column: 1 / 3;
+        grid-row: 30 / 32;
+        width: 90%;
+    }
+    
+    .fp-2 {
+        margin-top: 9px;
+    }
+    
+    .diagram-for-mark-fairwhale {
+        grid-column: 3 / 7;
+        grid-row: 30 / 39;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .mark-fairwhale {
+        max-width: 472px;
+        width: 100%;
+    }
+    
+    .diagram-for-yellow-river {
+        grid-column: 1 / 5;
+        grid-row: 40 / 49;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .yellow-river {
+        max-width: 472px;
+        width: 100%;
+    }
+    
+    .sample-3 {
+        grid-column: 5 / 7;
+        grid-row: 40 / 42;
+        justify-self: right;
+        width: 90%;
+    }
+    
+    .fp-3 {
+        margin-top: 9px;
+    }
+    
+    .s-3 {
+        grid-column: 1 / 7;
+        grid-row: 49 / 50;
+    }
+    
+    .st-2 {
+        grid-column: 1 / 2;
+        grid-row: 50 / 51;
+    }
+    
+    .process-title-1 {
+        grid-column: 2 / 6;
+        grid-row: 51 / 52;
+    }
+    
+    .subtitle {
+        font-size: 22px;
+        line-height: 22px;
+        letter-spacing: -0.2px;
+        margin: 0px;
+    }
+    
+    .process-title-text {
+        font-size: 31px;
+        line-height: 38px;
+        letter-spacing: -0.8px;
+        margin-top: 6px;
+    }
+    
+    .fp-4 {
+        grid-column: 2 / 6;
+        grid-row: 52 / 54;
+        position: relative;
+        top: 20px;
+    }
+    
+    .typical-architecture-diagram {
+        grid-column: 2 / 6;
+        grid-row: 55 / 58;
+        width: 100%;
+        position: relative;
+        top: -40px;
+    }
+    
+    .initial-goals {
+        grid-column: 2 / 6;
+        grid-row: 59 / 60;
+        width: 90%;
+        position: relative;
+        top: -40px;
+    }
+    
+    .goal-list {
+        grid-column: 2 / 6;
+        grid-row: 60 / 62;
+        margin: 0px;
+        position: relative;
+        top: -30px;
+    }
+    
+    .goal-list-item:not(:last-child) {
+        margin-bottom: 9px;
+    }
+    
+    .fp-ig {
+        margin-top: 6px;
+    }
+    
+    .process-title-2 {
+        grid-column: 2 / 6;
+        grid-row: 63 / 64;
+        position: relative;
+        top: -30px;
+    }
+    
+    .fp-5 {
+        grid-column: 2 / 6;
+        grid-row: 64 / 66;
+        position: relative;
+        top: -45px;
+    }
+    
+    .expandable-grid {
+        grid-column: 2 / 6;
+        grid-row: 66 / 71;
+        width: 100%;
+        position: relative;
+        top: -30px;
+    }
+    
+    .pt-5 {
+        grid-column: 2 / 6;
+        grid-row: 71 / 72;
+    }
+    
+    .fp-6 {
+        grid-column: 2 / 6;
+        grid-row: 71 / 72;
+        position: relative;
+        top: 35px;
+    }
+    
+    .video-container {
+        grid-column: 2 / 6;
+        grid-row: 72 / 79;
+        background-color: #ffffff;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: 40px;
+    }
+    
+    .expandable-grid-video {
+        width: 100%;
+        max-width: 472px;
+    }
+    
+    .process-title-3 {
+        grid-column: 2 / 6;
+        grid-row: 80 / 81;
+        position: relative;
+        top: 40px;
+    }
+    
+    .fp-7 {
+        grid-column: 2 / 6;
+        grid-row: 81 / 82;
+        position: relative;
+        top: 25px;
+    }
+    
+    .colors {
+        grid-column: 1 / 4;
+        grid-row: 83 / 87;
+        width: 100%;
+    }
+    
+    .first-3d-icon-set {
+        grid-column: 4 / 7;
+        grid-row: 83 / 87;
+        width: 100%;
+    }
+    
+    .diagrams-for-ecarx {
+        grid-column: 1 / 7;
+        grid-row: 87 / 93;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: 43px;
+    }
+    
+    .ecarx {
+        width: 100%;
+        max-width: 472px;
+    }
+    
+    .blender-screenshot {
+        grid-column: 1 / 5;
+        grid-row: 94 / 99;
+        width: 100%;
+        justify-self: left;
+        position: relative;
+        top: 30px;
+        max-width: 584px;
+    }
+    
+    .shift-to-minimalism {
+        grid-column: 5 / 7;
+        grid-row: 94 / 97;
+        position: relative;
+        top: 50px;
+    }
+    
+    .fp-8 {
+        margin-top: 12px;
+    }
+    
+    .variants-image {
+        grid-column: 1 / 5;
+        grid-row: 100 / 109;
+        width: 100%;
+        max-width: 584px;
+    }
+    
+    .figma-panel {
+        grid-column: 5 / 7;
+        grid-row: 100 / 101;
+        width: 100%;
+        max-width: 283px;
+    }
+    
+    .variants {
+        grid-column: 5 / 7;
+        grid-row: 102 / 104;
+        justify-self: right;
+        position: relative;
+        top: -40px;
+        width: 95%;
+    }
+    
+    .fp-9 {
+        margin-top: 12px;
+    }
+    
+    .software-icons-image {
+        grid-column: 1 / 5;
+        grid-row: 110 / 113;
+        width: 100%;
+        max-width: 584px;
+    }
+    
+    .icons-for-software {
+        grid-column: 5 / 7;
+        grid-row: 110 / 113;
+        width: 95%;
+        justify-self: right;
+        position: relative;
+        top: 0px;
+    }
+    
+    .s-4 {
+        grid-column: 1 / 7;
+        grid-row: 113 / 114;
+    }
+    
+    .st-3 {
+        grid-column: 1 / 2;
+        grid-row: 114 / 115;
+    }
+    
+    .diagrams-for-guotai {
+        grid-column: 1 / 5;
+        grid-row: 115 / 128;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .guotai-junan-securities-1 {
+        max-width: 472px;
+        width: 100%;
+        max-height: 100%;
+        height: auto;
+    }
+    
+    .guotai-junan-securities-2 {
+        margin-top: 40px;
+        max-width: 472px;
+        width: 100%;
+        max-height: 100%;
+        height: auto;
+    }
+    
+    .diagrams-for-healthcare-industry-solution {
+        grid-column: 1 / 7;
+        grid-row: 129 / 138;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .healthcare-industry-solution {
+        width: 100%;
+        max-width: 693px;
+    }
+    
+    footer {
+        grid-column: 1 / 7;
+        grid-row: 138 / 139;
+        font-size: 11px;
+        line-height: 15px;
+        letter-spacing: 0.1px;
+        color: #8d8d8d;
+        border-top: 1px solid #c6c6c6;
+        padding-top: 16px;
+        align-self: end;
+    }
 }
