--- a/diagram-library/style.css
+++ b/diagram-library/style.css
@@ -1113,7 +1113,7 @@ footer {
         display: grid;
         gap: 15px;
         grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: repeat(153, 80px);
+        grid-template-rows: repeat(159, 80px);
         max-width: 1120px;
         padding: 60px;
         background-color: #f5f5f5;
@@ -1442,7 +1442,7 @@ footer {
         grid-row: 66 / 67;
         width: 90%;
         position: relative;
-        top: -40px;
+        top: 40px;
     }
     
     .goal-list {
@@ -1450,7 +1450,8 @@ footer {
         grid-row: 67 / 69;
         margin: 0px;
         position: relative;
-        top: -30px;
+        top: 40px;
+        left: -10px;
     }
     
     .goal-list-item:not(:last-child) {
@@ -1463,48 +1464,50 @@ footer {
     
     .process-title-2 {
         grid-column: 1 / 7;
-        grid-row: 70 / 71;
+        grid-row: 71 / 72;
         position: relative;
-        top: -30px;
+        top: -40px;
     }
     
     .fp-5 {
         grid-column: 1 / 7;
-        grid-row: 71 / 72;
+        grid-row: 72 / 73;
         position: relative;
-        top: -45px;
+        top: -55px;
     }
     
     .expandable-grid {
         grid-column: 1 / 7;
-        grid-row: 73 / 79;
+        grid-row: 74 / 80;
         width: 100%;
         position: relative;
-        top: -30px;
+        top: -50px;
     }
     
     .pt-5 {
         grid-column: 1 / 7;
-        grid-row: 79 / 80;
+        grid-row: 80 / 81;
+        position: relative;
+        top: 40px;
     }
     
     .fp-6 {
         grid-column: 1 / 7;
-        grid-row: 79 / 80;
+        grid-row: 81 / 82;
         position: relative;
-        top: 35px;
+        top: -25px;
     }
     
     .video-container {
         grid-column: 1 / 7;
-        grid-row: 80 / 88;
+        grid-row: 82 / 90;
         background-color: #ffffff;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         position: relative;
-        top: 40px;
+        top: -30px;
     }
     
     .expandable-grid-video {
@@ -1514,126 +1517,143 @@ footer {
     
     .process-title-3 {
         grid-column: 1 / 7;
-        grid-row: 89 / 90;
+        grid-row: 91 / 92;
         position: relative;
-        top: 40px;
+        top: 0px;
     }
     
     .fp-7 {
         grid-column: 1 / 7;
-        grid-row: 90 / 91;
+        grid-row: 92 / 93;
         position: relative;
-        top: 25px;
+        top: -15px;
     }
     
     .colors {
         grid-column: 1 / 4;
-        grid-row: 92 / 95;
+        grid-row: 94 / 97;
         width: 100%;
+        position: relative;
+        top: -40px;
     }
     
     .first-3d-icon-set {
         grid-column: 4 / 7;
-        grid-row: 92 / 95;
+        grid-row: 94 / 97;
         width: 100%;
+        position: relative;
+        top: -40px;
     }
     
     .diagrams-for-ecarx {
         grid-column: 1 / 7;
-        grid-row: 95 / 100;
+        grid-row: 97 / 104;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         position: relative;
-        top: 43px;
+        top: 20px;
     }
     
     .ecarx {
         width: 100%;
-        max-width: 472px;
+        max-width: 536px;
     }
     
     .blender-screenshot {
         grid-column: 1 / 7;
-        grid-row: 101 / 106;
+        grid-row: 105 / 110;
         width: 100%;
         justify-self: center;
         position: relative;
-        top: 30px;
-        max-width: 648px;
+        top: 0px;
+        max-width: 710px;
     }
     
     .shift-to-minimalism {
         grid-column: 1 / 7;
-        grid-row: 107 / 108;
+        grid-row: 111 / 112;
         position: relative;
         top: -30px;
     }
     
     .fp-8 {
-        margin-top: 12px;
+        margin-top: 50px;
     }
     
     .variants-image {
         grid-column: 1 / 7;
-        grid-row: 109 / 117;
+        grid-row: 113 / 121;
         width: 100%;
-        max-width: 1000px;
+        max-width: 710px;
+        justify-self: left;
+        position: relative;
+        top: 20px;
     }
     
     .figma-panel {
         grid-column: 1 / 4;
-        grid-row: 120 / 121;
+        grid-row: 125 / 126;
         width: 100%;
-        max-width: 317px;
+        max-width: 360px;
+        position: relative;
+        top: 20px;
     }
     
     .variants {
         grid-column: 4 / 7;
-        grid-row: 120 / 121;
-        justify-self: right;
+        grid-row: 125 / 126;
+        justify-self: left;
         position: relative;
-        top: 0px;
-        width: 95%;
+        left: 20px;
+        width: 85%;
+        position: relative;
+        top: 20px;
     }
     
     .fp-9 {
-        margin-top: 12px;
+        margin-top: 8px;
     }
     
     .software-icons-image {
         grid-column: 1 / 7;
-        grid-row: 123 / 126;
+        grid-row: 128 / 131;
         width: 100%;
-        max-width: 648px;
+        max-width: 710px;
     }
     
     .icons-for-software {
         grid-column: 1 / 7;
-        grid-row: 126 / 128;
+        grid-row: 132 / 134;
         width: 100%;
         justify-self: right;
         position: relative;
-        top: 30px;
+        top: -25px;
     }
     
     .s-4 {
         grid-column: 1 / 7;
-        grid-row: 128 / 129;
+        grid-row: 133 / 134;
+        position: relative;
+        top: 20px;
     }
     
     .st-3 {
         grid-column: 1 / 3;
-        grid-row: 129 / 130;
+        grid-row: 134 / 135;
+        position: relative;
+        top: 20px;
     }
     
     .diagrams-for-guotai {
         grid-column: 1 / 7;
-        grid-row: 130 / 145;
+        grid-row: 135 / 150;
         display: flex;
         flex-direction: column;
         align-items: center;
+        position: relative;
+        top: 20px;
     }
     
     .guotai-junan-securities-1 {
@@ -1653,11 +1673,13 @@ footer {
     
     .diagrams-for-healthcare-industry-solution {
         grid-column: 1 / 7;
-        grid-row: 146 / 153;
+        grid-row: 151 / 159;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        position: relative;
+        top: -20px;
     }
     
     .healthcare-industry-solution {
@@ -1667,7 +1689,7 @@ footer {
     
     footer {
         grid-column: 1 / 7;
-        grid-row: 153 / 154;
+        grid-row: 159 / 160;
         font-size: 11px;
         line-height: 15px;
         letter-spacing: 0.1px;
