--- a/diagram-library/style.css
+++ b/diagram-library/style.css
@@ -1701,3 +1701,608 @@ footer {
     }
 }
 
+@media (max-width: 768px) {
+    main {
+        display: grid;
+        gap: 12px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(140, 80px);
+        padding: 45px;
+        background-color: #f5f5f5;
+    }
+    
+    header {
+        background-image: url(/diagram-library/image/diagram-library.png);
+        background-size: cover;
+        background-position: center;
+        width: 100%;
+        height: 309px;
+        position: absolute;
+        border: 1px solid #ffffff;
+        box-sizing: border-box;
+    }
+    
+    .back {
+        background-color: rgba(0, 0, 0, 0.58);
+        border-radius: 16px;
+        position: relative;
+        z-index: 3;
+        top: 6px;
+        left: 4px;
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        width: 65px;
+        height: 28px;
+    }
+    
+    .back-icon {
+        position: relative;
+        left: 7px;
+        width: 14px;
+    }
+    
+    .back-link {
+        display: inline;
+    }
+    
+    .back-text {
+        color: #ffffff;
+        font-size: 12px;
+        line-height: 12px;
+        font-weight: 600;
+        position: relative;
+        left: 10px;
+        top: 0px;
+    }
+    
+    h1 {
+        grid-column: 1 / 3;
+        grid-row: 5 / 6;
+        font-size: 28px;
+        line-height: 38px;
+        font-weight: normal;
+        letter-spacing: -0.8px;
+        margin: 0px;
+        position: relative;
+        top: -20px;
+    }
+    
+    .bold-title {
+        letter-spacing: -0.6px;
+    }
+    
+    .seperator {
+        border-bottom: 1px solid #c6c6c6;
+    }
+    
+    .s-1 {
+        grid-column: 1 / 3;
+        grid-row: 6 / 7;
+        position: relative;
+        top: -30px;
+    }
+    
+    .work-info {
+        list-style-type: none;
+        padding: 0px;
+        margin: 0px;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: -0.1px;
+    }
+    
+    .info-name {
+        grid-column: 1 / 2;
+        grid-row: 7 / 8;
+        color: #acacac;
+        position: relative;
+        top: -30px;
+    }
+    
+    .info-content {
+        grid-column: 2 / 3;
+        grid-row: 7 / 8;
+        color: #000000;
+        position: relative;
+        top: -30px;
+    }
+    
+    .info-name-item:not(:last-child), .info-content-item:not(:last-child) {
+        margin-bottom: 6px;
+    }
+    
+    .work-description {
+        grid-column: 1 / 3;
+        grid-row: 8 / 11;
+        position: relative;
+        top: 10px;
+    }
+    
+    .work-description-paragraph:not(:last-child) {
+        margin-bottom: 10px;
+    } 
+    
+    p {
+        margin: 0px;
+    }
+    
+    .body-text {
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: -0.1px;
+    }
+    
+    .quick-link {
+        grid-column: 1 / 2;
+        grid-row: 12 / 13;
+        list-style-type: none;
+        margin: 0px;
+        padding: 0px;
+        line-height: 13px;
+        align-self: end;
+        position: relative;
+        top: 40px;
+    }
+    
+    .link {
+        font-size: 13px;
+        line-height: 13px;
+        color: #166ced;
+        text-decoration: none;
+    }
+    
+    .link:hover {
+        text-decoration: underline;
+    }
+    
+    .quick-link-item:not(:last-child) {
+        margin-bottom: 12px;
+    }
+    
+    .s-2 {
+        grid-column: 1 / 3;
+        grid-row: 13 / 14;
+        position: relative;
+        top: 20px;
+    }
+    
+    .section-title {
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: -0.1px;
+        color: #acacac;
+        font-weight: normal;
+        margin: 0px;
+    }
+    
+    .st-1 {
+        grid-column: 1 / 3;
+        grid-row: 14 / 15;
+        position: relative;
+        top: 20px;
+    }
+    
+    .diagrams-for-bocomm {
+        grid-column: 1 / 3;
+        grid-row: 15 / 27;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .diagram-background {
+        background-color: #ffffff;
+        padding: 40px;
+    }
+    
+    .bank-of-communications-1 {
+        max-width: 410px;
+        width: 100%;
+        max-height: 100%;
+        height: auto;
+    }
+    
+    .bank-of-communications-2 {
+        margin-top: 28px;
+        max-width: 410px;
+        width: 100%;
+        max-height: 100%;
+        height: auto;
+    }
+    
+    .image-description {
+        margin-top: 8px;
+        font-size: 13px;
+        line-height: 13px;
+        color: #8e9aa9;
+        text-align: center;
+        font-family: "Inter";
+    }
+    
+    .sample-1 {
+        grid-column: 1 / 3;
+        grid-row: 27 / 28;
+        justify-self: left;
+        width: 100%;
+        position: relative;
+        top: 10px;
+    }
+    
+    .paragraph-title {
+        font-size: 17px;
+        line-height: 25px;
+        letter-spacing: -0.1px;
+        margin: 0px;
+    }
+    
+    .fp-1 {
+        margin-top: 8px;
+    }
+    
+    .sample-2 {
+        grid-column: 1 / 3;
+        grid-row: 37 / 38;
+        width: 100%;
+        position: relative;
+        top: 10px;
+    }
+    
+    .fp-2 {
+        margin-top: 9px;
+    }
+    
+    .diagram-for-mark-fairwhale {
+        grid-column: 1 / 3;
+        grid-row: 29 / 37;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .mark-fairwhale {
+        max-width: 410px;
+        width: 100%;
+    }
+    
+    .diagram-for-yellow-river {
+        grid-column: 1 / 3;
+        grid-row: 39 / 47;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .yellow-river {
+        max-width: 410px;
+        width: 100%;
+    }
+    
+    .sample-3 {
+        grid-column: 1 / 3;
+        grid-row: 47 / 48;
+        justify-self: left;
+        width: 100%;
+        position: relative;
+        top: 15px;
+    }
+    
+    .fp-3 {
+        margin-top: 9px;
+    }
+    
+    .s-3 {
+        grid-column: 1 / 3;
+        grid-row: 48 / 49;
+    }
+    
+    .st-2 {
+        grid-column: 1 / 2;
+        grid-row: 49 / 50;
+    }
+    
+    .process-title-1 {
+        grid-column: 1 / 3;
+        grid-row: 50 / 51;
+    }
+    
+    .subtitle {
+        font-size: 19px;
+        line-height: 19px;
+        letter-spacing: -0.1px;
+        margin: 0px;
+    }
+    
+    .process-title-text {
+        font-size: 28px;
+        line-height: 34px;
+        letter-spacing: -0.6px;
+        margin-top: 7px;
+    }
+    
+    .fp-4 {
+        grid-column: 1 / 3;
+        grid-row: 51 / 53;
+        position: relative;
+        top: 15px;
+    }
+    
+    .typical-architecture-diagram {
+        grid-column: 1 / 3;
+        grid-row: 53 / 56;
+        width: 100%;
+        max-width: 490px;
+        position: relative;
+        top: 30px;
+        justify-self: left;
+    }
+    
+    .initial-goals {
+        grid-column: 1 / 3;
+        grid-row: 57 / 58;
+        width: 100%;
+        position: relative;
+        top: -30px;
+    }
+    
+    .goal-list {
+        grid-column: 1 / 3;
+        grid-row: 58 / 60;
+        margin: 0px;
+        position: relative;
+        width: 90%;
+        top: -20px;
+        left: -15px;
+    }
+    
+    .goal-list-item:not(:last-child) {
+        margin-bottom: 4px;
+    }
+    
+    .fp-ig {
+        margin-top: 6px;
+    }
+    
+    .process-title-2 {
+        grid-column: 1 / 3;
+        grid-row: 60 / 61;
+        position: relative;
+        top: 0px; 
+    }
+    
+    .fp-5 {
+        grid-column: 1 / 3;
+        grid-row: 61 / 63;
+        position: relative;
+        top: 16px;
+    }
+    
+    .expandable-grid {
+        grid-column: 1 / 3;
+        grid-row: 63 / 68;
+        justify-self: left;
+        width: 100%;
+        max-width: 490px;
+        position: relative;
+        top: 40px;
+    }
+    
+    .pt-5 {
+        grid-column: 1 / 3;
+        grid-row: 68 / 69;
+        position: relative;
+        top: 10px;
+    }
+    
+    .fp-6 {
+        grid-column: 1 / 3;
+        grid-row: 68 / 69;
+        position: relative;
+        top: 45px;
+    }
+    
+    .video-container {
+        grid-column: 1 / 3;
+        grid-row: 70 / 76;
+        background-color: #ffffff;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: -40px;
+    }
+    
+    .expandable-grid-video {
+        width: 100%;
+        max-width: 410px;
+    }
+    
+    .process-title-3 {
+        grid-column: 1 / 3;
+        grid-row: 77 / 78;
+        position: relative;
+        top: 0px;
+    }
+    
+    .fp-7 {
+        grid-column: 1 / 3;
+        grid-row: 78 / 79;
+        position: relative;
+        top: -20px;
+    }
+    
+    .colors {
+        grid-column: 1 / 3;
+        grid-row: 80 / 84;
+        justify-self: left;
+        width: 100%;
+        max-width: 490px;
+        position: relative;
+        top: -40px;
+    }
+    
+    .first-3d-icon-set {
+        grid-column: 1 / 3;
+        grid-row: 84 / 88;
+        justify-self: left;
+        width: 100%;
+        max-width: 490px;
+        position: relative;
+        top: 33px;
+    }
+    
+    .diagrams-for-ecarx {
+        grid-column: 1 / 3;
+        grid-row: 89 / 95;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: 14px;
+    }
+    
+    .ecarx {
+        width: 100%;
+        max-width: 410px;
+    }
+    
+    .blender-screenshot {
+        grid-column: 1 / 3;
+        grid-row: 96 / 100;
+        width: 100%;
+        justify-self: left;
+        position: relative;
+        top: 0px; 
+        max-width: 490px;
+    }
+    
+    .shift-to-minimalism {
+        grid-column: 1 / 3;
+        grid-row: 100 / 101;
+        position: relative;
+        top: 20px;
+    }
+    
+    .fp-8 {
+        margin-top: 20px;
+    }
+    
+    .variants-image {
+        grid-column: 1 / 3;
+        grid-row: 103 / 111;
+        width: 100%;
+        max-width: 490px;
+        justify-self: left;
+        position: relative;
+        top: 0px;
+    }
+    
+    .figma-panel {
+        grid-column: 1 / 3;
+        grid-row: 111 / 113;
+        justify-self: left;
+        width: 100%;
+        max-width: 360px;
+        position: relative;
+        top: 30px;
+    }
+    
+    .variants {
+        grid-column: 1 / 3;
+        grid-row: 113 / 114;
+        justify-self: left;
+        position: left;
+        left: 0px;
+        width: 100%;
+        position: relative;
+        top: 20px;
+    }
+    
+    .fp-9 {
+        margin-top: 8px;
+    }
+    
+    .software-icons-image {
+        grid-column: 1 / 3;
+        grid-row: 115 / 117;
+        width: 100%;
+        max-width: 490px;
+        position: relative;
+        top: 0px;
+    }
+    
+    .icons-for-software {
+        grid-column: 1 / 3;
+        grid-row: 118 / 119;
+        width: 100%;
+        justify-self: right;
+        position: relative;
+        top: -25px;
+    }
+    
+    .s-4 {
+        grid-column: 1 / 3;
+        grid-row: 119 / 120;
+        position: relative;
+        top: 0px;
+    }
+    
+    .st-3 {
+        grid-column: 1 / 3;
+        grid-row: 120 / 121;
+        position: relative;
+        top: 0px;
+    }
+    
+    .diagrams-for-guotai {
+        grid-column: 1 / 3;
+        grid-row: 121 / 133;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        top: 20px;
+    }
+    
+    .guotai-junan-securities-1 {
+        max-width: 410px;
+        width: 100%;
+        max-height: 100%;
+        height: auto;
+    }
+    
+    .guotai-junan-securities-2 {
+        margin-top: 40px;
+        max-width: 410px;
+        width: 100%;
+        max-height: 100%;
+        height: auto;
+    }
+    
+    .diagrams-for-healthcare-industry-solution {
+        grid-column: 1 / 3;
+        grid-row: 134 / 140;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: -20px;
+    }
+    
+    .healthcare-industry-solution {
+        width: 100%;
+        max-width: 428px;
+    }
+    
+    footer {
+        grid-column: 1 / 3;
+        grid-row: 140 / 141;
+        font-size: 11px;
+        line-height: 15px;
+        letter-spacing: 0.1px;
+        color: #8d8d8d;
+        border-top: 1px solid #c6c6c6;
+        padding-top: 16px;
+        align-self: end;
+    }
+}
