--- a/product-tour-and-smartx-community/style.css
+++ b/product-tour-and-smartx-community/style.css
@@ -2264,6 +2264,8 @@ footer {
         position: absolute;
         width: 100%;
         height: 92%;
+        max-width: 490px;
+        max-height: 450.27px;
         border: 1px solid #ffffff;
         box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05), 0px 2px 7px rgba(0, 0, 0, 0.12);
         z-index: 1;
@@ -2292,6 +2294,8 @@ footer {
     .feature-3 {
         grid-column: 1 / 3;
         grid-row: 35 / 36;
+        position: relative;
+        top: 15px;
     }
     
     .fp-3 {
@@ -2313,6 +2317,8 @@ footer {
         position: absolute;
         width: 100%;
         height: 92%;
+        max-width: 490px;
+        max-height: 450.27px;
         border: 1px solid #ffffff;
         box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05), 0px 4px 11px rgba(0, 0, 0, 0.08);
         z-index: 2;
@@ -2366,12 +2372,13 @@ footer {
     
     .visualize-goal {
         grid-column: 1 / 3;
-        grid-row: 41 / 42;
+        grid-row: 40 / 44;
         width: 100%;
-        align-self: start;
+        max-width: 490px;
+        align-self: center;
         position: relative;
         margin-top: 0px;
-        top: 48px;
+        top: 0px;
         bottom: 0px;
     }
     
@@ -2379,6 +2386,8 @@ footer {
         grid-column: 1 / 3;
         grid-row: 44 / 45;
         width: 100%;
+        position: relative;
+        top: -30px;
     }
 
     .fp-ig {
@@ -2393,7 +2402,7 @@ footer {
         position: relative;
         left: 15px;
         width: 98%;
-        top: 0px;
+        top: -30px;
     }
 
     
@@ -2495,6 +2504,8 @@ footer {
         position: absolute;
         width: 100%;
         height: 71.2%;
+        max-width: 490px;
+        max-height: 348.3px;
         border: 1px solid #ffffff;
         box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.08), 0px 4px 13px rgba(0, 0, 0, 0.07);
         overflow: hidden;
@@ -2559,7 +2570,7 @@ footer {
         grid-row: 72 / 75;
         background-image: url(/product-tour-and-smartx-community/image/little-detail-1.png);
         background-size: cover;
-        background-position: center;
+        background-position: top;
     }
     
     .line {
@@ -2586,10 +2597,10 @@ footer {
         grid-column: 2 / 3;
         grid-row: 72 / 75;
         justify-self: right;
-        align-self: center;
+        align-self: top;
         width: 94%;
         position: relative;
-        top: 6px;
+        top: 38px;
     }
     
     .fp-9 {
@@ -2618,6 +2629,7 @@ footer {
         grid-column: 1 / 3;
         grid-row: 79 / 81;
         width: 100%;
+        max-width: 490px;
         position: relative;
         top: 0px;
     }
@@ -2716,6 +2728,7 @@ footer {
         grid-row: 98 / 100;
         align-self: end;
         width: 100%;
+        max-width: 490px;
         position: relative;
         top: -20px;
     }
